--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang=es>
 	<head>
 		<title>Contrase&#241as y Encriptaci&#243n</title>
+		<link rel="shortcut icon" type="x-icon" href="icon.png">
 		<link rel="stylesheet" type="text/css" href="Reset-Style.css" media="screen">
 		<link rel="stylesheet" type="text/css" href="Passwords-Encryption-Style.css" media="screen">
 	</head>
