--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang=es>
 	<head>
 		<title>Contrase&#241as y Encriptaci&#243n</title>
+		<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
 		<link rel="shortcut icon" type="x-icon" href="icon.png">
 		<link rel="stylesheet" type="text/css" href="Reset-Style.css" media="screen">
 		<link rel="stylesheet" type="text/css" href="Passwords-Encryption-Style.css" media="screen">
@@ -20,7 +21,7 @@
 				</nav>
 			</div>
 			<div id= "headerMain-name">
-				<h3>Programaci&#243n 6°E</h3>
+				<h3 id="tituloh3">Programaci&#243n 6°E</h3>
 				<img src= "IPET 247.png"></img>
 			</div>
 		</header>
@@ -34,7 +35,7 @@
 			<br><br><br><br><h1>Introducción</h1><br>
 			<p>Si estás leyendo esto, es porque has decidido que tienes interés en las principales formas en las que tus datos son protegidos de los delincuentes cibernéticos, ¡lo cual es genial! Pero si por algún motivo no es tu caso, ahora vamos a explicar por qué sí debería serlo.</p>
 			<p>Actualmente es muy común que todos tengan sus redes sociales, su cuenta de una billetera virtual o de un sitio de compras, es parte del avance tecnológico y demuestra algunas de las cosas de las que somos capaces con el tiempo. Sin embargo, a pesar de todo lo impresionante que trae, también genera un nuevo mercado para los criminales. Sea robar tu cuenta de una red social para pedirle dinero a personas que probablemente conoces, venderla a alguna empresa sospechosa, o incluso seguir un camino de patrones entre tus cuentas para acceder a tu dinero; siempre habrá una persona que quiera apoderarse ilegalmente de tu identidad para beneficiarse a tu costa.</p><br>
-			<div id="imgIntro"></div><br>
+			<div><img src="IntroImagen.jpg"></img></div><br>
 			<p>Hay muchas formas de proteger tus datos para estos casos, dos muy importantes los exploraremos más adelante, pero consideremos por un momento, ¿No es mejor prevenir que tus datos sean potencialmente accesibles en primer lugar? <em>¡"Mejor prevenir que curar" dijo alguien en algún momento!</em></p>
 			<p>La idea tiene sentido, pero este mundo virtual no puede simplemente proveerte un servicio si no sabe quién eres. Imáginate que compras algo en Internet, pero el producto llega a una casa aleatoria en el mundo porque el sitio no puede saber quién eres ni dónde estás. Sería un mundo muy extraño en el que vivir, lleno de momentos incómodos y reseñas de 1 estrella (que tampoco se podrían registrar). El intercambio de datos es fundamental para el funcionamiento de nuestro mundo, tú necesitas el servicio, la empresa necesita tus datos personales que almacenará, procesará y probablemente venderá a otras empresas... ¿"venderá"? ¡Eso es <strong>ilegal</strong> y está <strong>mal!</strong> No pueden simplemente- <em>Sí, sí pueden.</em></p>
 			<p>Todo servicio tiene un precio dentro de lo razonable y establecido por la ley. Puedes acceder a un mundo de información mayormente no fundamentada al precio de que Google vende tus busquedas a otros sitios. Hablando de lo establecido por la ley, vamos a profundizar en este tema a continuación.</p>
@@ -81,7 +82,7 @@
 					<p>Los datos sensibles son datos personales que incluyen las posturas, ideales y rasgos físicos o psíquicos de las personas, esos datos pueden ser posturas políticas, religión, identidad sexual, de género o cultural, etc. Los datos sensibles están protegidos por regulaciones como el Reglamento General de Protección de Datos (RPGD) en la Unión Europea y La Ley De Protección De Datos Personales en otros países (como Argentina). Las empresas no pueden tener datos sensibles, con excepciones que permiten el manejo de los datos sensibles, por ejemplo, el consentimiento explicito, el interés público, realizar una investigación científica o una emergencia médica.</p>
 					<p>Por ejemplo, una institución de salud puede guardar tu historial médico, una comisaría puede conservar tu historial criminal, una iglesia puede saber tu religión, etc.</p>
 				</div>
-				<div id="datosPersonalesImg"></div>
+				<div id="datosPersonalesImg"><img src="datosPersonalesImagen.png"></img></div>
 			</div><br><br>
 			<h2>¿Cómo consiguen las empresas tus datos?</h2><br>
 			<p>Siempre que el sitio funcione de manera legal, tú estarás proporcionando tus datos voluntariamente según lo que aceptaste en los términos y condiciones que leíste por completo con mucha atención antes de aceptar... sí leíste los términos y condiciones <em>¿Verdad?...</em></p>
@@ -159,11 +160,11 @@
 			<p>Al hackear una cuenta de Instagram con muchos seguidores se la puede vender a una empresa sospechosa, o utilizarse para estafar a las personas con las que hablas en la plataforma. Además, va a estar asociada a un e-mail que probablemente será el mismo asociado a una cuenta de Twitter (X), Facebook, Mercado Libre, etcétera.</p>
 			<p>Una contraseña le asegura al sitio que tú eres la persona accediendo y evita que un intruso se aproveche de toda esa información. Sin embargo, tiene que ser una buena contraseña para evitar que un hacker la adivine a fuerza bruta.</p><br>
 			<div class="parentDiv-Space_Evenly">
-				<div class="childDiv" id="passwordListDiv"><br>
+				<div class="childDiv" id="passwordListDiv">
 					<h3>Estructura ideal de una contraseña</h3>
 					<ul class="bpointList">
 						<li>Más de 10-15 caracteres</li>
-					<p>Mientras más caracteres haya, más tiene que adivinar el hacker. Es como una apuesta, pero tiene que adivinar correctamente 15 veces seguidas y tiene más de 60 posibilidades en cada ronda.</p>
+					<p>Mientras más caracteres haya, más tiene que adivinar el hacker. Como una apuesta, pero tiene que adivinar correctamente 15 veces seguidas y tiene más de 60 posibilidades cada ronda.</p>
 						<li>4 palabras vagamente relacionadas</li>
 					<p>Utilizar caracteres aleatorios es tan efectivo como difícil de recordar, por eso se utilizan palabras. Una sola palabra es fácil de adivinar, 4 le añade más dificultad, pero si están muy obviamente relacionadas es como usar una sola. Piensa en opciones que puedas relacionar de manera inusual.</p>
 						<li>Mayúsculas y minúsculas</li>
