--- a/index.html
+++ b/index.html
@@ -164,15 +164,15 @@
 					<h3>Estructura ideal de una contraseña</h3>
 					<ul class="bpointList">
 						<li>Más de 10-15 caracteres</li>
-					<p>Mientras más caracteres haya, más tiene que adivinar el hacker. Como una apuesta, pero tiene que adivinar correctamente 15 veces seguidas y tiene más de 60 posibilidades cada ronda.</p>
+					<p class="resumible">Mientras más caracteres haya, más tiene que adivinar el hacker. Como una apuesta, pero tiene que adivinar correctamente 15 veces seguidas y tiene más de 60 posibilidades cada ronda.</p>
 						<li>4 palabras vagamente relacionadas</li>
-					<p>Utilizar caracteres aleatorios es tan efectivo como difícil de recordar, por eso se utilizan palabras. Una sola palabra es fácil de adivinar, 4 le añade más dificultad, pero si están muy obviamente relacionadas es como usar una sola. Piensa en opciones que puedas relacionar de manera inusual.</p>
+					<p class="resumible">Utilizar caracteres aleatorios es tan efectivo como difícil de recordar, por eso se utilizan palabras. Una sola palabra es fácil de adivinar, 4 le añade más dificultad, pero si están muy obviamente relacionadas es como usar una sola. Piensa en opciones que puedas relacionar de manera inusual.</p>
 						<li>Mayúsculas y minúsculas</li>
-					<p>El abecedario inglés (que siempre es aceptado por los sistemas) cuenta con 26 letras, intercambiar entre MAYÚSCULAS y minúsculas rápidamente duplica este número, dando un total de 52 posibilidades.</p>
+					<p class="resumible">El abecedario inglés (que siempre es aceptado por los sistemas) cuenta con 26 letras, intercambiar entre MAYÚSCULAS y minúsculas rápidamente duplica este número, dando un total de 52 posibilidades.</p>
 						<li>Números</li>
-					<p>Hay 10 números básicos, que además se pueden intercambiar con las letras en una palabra, aumentando las posibilidades a 62. Cabe aclarar, hacer reemplazos simples (cómo “4” en vez de “A”) en todas las ocasiones posibles puede dañar la calidad de la contraseña al ser más predecible.</p>
+					<p class="resumible">Hay 10 números básicos, que además se pueden intercambiar con las letras en una palabra, aumentando las posibilidades a 62. Cabe aclarar, hacer reemplazos simples (cómo “4” en vez de “A”) en todas las ocasiones posibles puede dañar la calidad de la contraseña al ser más predecible.</p>
 						<li>Símbolos</li>
-					<p>Dependiendo del sitio, algunos caracteres especiales van estar restringidos porque el sistema puede confundirlos como parte del código. Algo común es que el sitio no te permita utilizar letras “inusuales” como la “ñ” o la “ü” porque el sistema no los reconoce, limitando tus opciones. Siempre que puedas utilizar símbolos, deberías aprovechar tu oportunidad y reemplazar letras.</p>
+					<p class="resumible">Dependiendo del sitio, algunos caracteres especiales van estar restringidos porque el sistema puede confundirlos como parte del código. Algo común es que el sitio no te permita utilizar letras “inusuales” como la “ñ” o la “ü” porque el sistema no los reconoce, limitando tus opciones. Siempre que puedas utilizar símbolos, deberías aprovechar tu oportunidad y reemplazar letras.</p>
 						<li>NO CONTIENE DATOS PERSONALES</li>
 					<p>Es MUY importante no incluir datos personales en tu contraseña, cosas como tu nombre, el de una mascota o amigo, fechas de nacimiento, el nombre del sitio o de tu usuario, etcétera, son predecibles y algunos se pueden encontrar en las redes de manera pública.</p>
 					</ul>
