--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 		</section>
 		<section id="dataSection">
 			<h2>Datos</h2><br>
-			<p>¿Qué tan lejos llegan los datos que se pueden recolectar? ¿Qué es lo que pueden hacer con ellos? ¿Pueden leer ese mensaje vergonzoso que mandé al chat equivocado el primero de agosto del año 2016 a las 04:23 am? Todas estás preguntas y más alcanzarán su descanso.</p>
-			<p>Las empresas pueden recolectar caulquier dato que sea aceptado bajo la ley Proteccion De Los Datos Personales Ley 25.326, esta establece una serie de reglas y restricciones que deben cumplirse antes de que tus datos sean recolectados, además de una serie de derechos que tú tienes sobre tus propios datos.</p>
+			<p>¿Qué tan lejos llegan los datos que se pueden recolectar? ¿Qué es lo que pueden hacer con ellos? ¿Pueden leer ese mensaje vergonzoso que mandé al chat equivocado el primero de agosto del año 2016 a las 4:23 am? Todas estás preguntas y más alcanzarán su descanso.</p>
+			<p>Las empresas pueden recolectar cualquier dato que sea aceptado bajo la Ley 25.326 Protección De Los Datos Personales, ésta establece una serie de reglas y restricciones que deben cumplirse antes de que tus datos sean recolectados, además de una serie de derechos que tú tienes sobre tus propios datos.</p>
 			<p>Principalmente se puede destacar lo siguiente:</p><br>
 			<div class="parentDiv-Space_Evenly">
 				<div class="childDiv" id="obligacionesDiv">
@@ -68,18 +68,18 @@
 						<li>Puedes pedir que se corrijan tus datos si son erronéos.</li>
 						<li>Puedes exigir la eliminación de tus datos.</li>
 						<li>Tu consentimiento es revocable en cualquier momento si cambias de opinión.</li>
-						<li>Puedes oponerte al tratamiento de tus datos personales</li>
+						<li>Puedes oponerte al tratamiento de tus datos personales.</li>
 					</ul>
 				</div>
 			</div><br>
-			<p>Bastante aceptable, son bastantes reglas que se centran en que tú tengas el control, pero ¿Qué son los datos sensibles? ¿Por qué no se pueden recolectar? Es aquí donde hay que dejar claro algo.</p>
-			<p>Existen 2 tipos de datos diferenciados por la ley de Proteccion De Los Datos Personales Ley 25.326; los datos personales y los datos sensibles.</p><br><br>
+			<p>Bastante aceptable, son bastantes reglas que se centran en que tú tengas el control, pero ¿Qué son los datos sensibles? ¿Por qué no se pueden recolectar? Es aquí donde hay que dejar algo claro.</p>
+			<p>Existen 2 tipos de datos diferenciados por la Ley 25.326 Protección De Los Datos Personales; los datos personales y los datos sensibles.</p><br><br>
 			<div class="parentDiv">
 				<div id="definicionDatosDiv">
 					<h3>Datos Personales</h3><br>
-					<p>Los datos personales son aquella información sobre personas jurídicas o físicas que permite identificarlas directa o indirectamente, esa información pueden ser datos como nombre, apellido, número de documento, domicilio, etc. También incluyen información financiera sobre ti, pueden ser detalles de cuentas bancarias para transacciones, los métodos de pago que tengas a tu nombre, registros de créditos y pagos; pueden ser datos de salud, por ejemplo, nuestro historial médico, seguros de salud, resultados de exámenes médicos; incluso llegando a datos de comportamiento, tales como tu historial de navegación web, datos de tu ubicación geográfica y preferencias de compra. Y muchas, <strong>muchas</strong> cosas más.</p><br><br>
+					<p>Los datos personales son aquella información sobre personas jurídicas o físicas que permite identificarlas directa o indirectamente, esa información pueden ser datos como nombre, apellido, número de documento, domicilio, etc. También incluyen información financiera sobre ti, pueden ser detalles de cuentas bancarias para transacciones, los métodos de pago que tengas a tu nombre, registros de créditos y pagos; pueden ser datos de salud, por ejemplo, tu historial médico, seguros de salud, resultados de exámenes médicos; incluso llegando a datos de comportamiento, tales como tu historial de navegación web, datos de tu ubicación geográfica y preferencias de compra. Y muchas, <strong>muchas</strong> cosas más.</p><br><br>
 					<h3>Datos Sensibles</h3><br>
-					<p>Los datos sensibles son datos personales que incluyen las posturas, ideales y rasgos físicos o psíquicos de las personas, esos datos pueden ser posturas políticas, religión, identidad sexual, de género o cultural, etc. Los datos sensibles están protegidos por regulaciones como el Reglamento General de Protección de Datos (RPGD) en la Unión Europea y La Ley De Protección De Datos Personales en otros países (como Argentina). Las empresas no pueden tener datos sensibles, con excepciones que permiten el manejo de los datos sensibles, por ejemplo, el consentimiento explicito, el interés público, realizar una investigación científica o una emergencia médica.</p>
+					<p>Los datos sensibles son datos personales que incluyen las posturas, ideales y rasgos físicos o psíquicos de las personas, esos datos pueden ser posturas políticas, religión, identidad sexual, de género o cultural, etc. Los datos sensibles están especialmente protegidos por regulaciones como el Reglamento General de Protección de Datos (RPGD) en la Unión Europea y La Ley De Protección De Datos Personales en otros países (como Argentina). Las empresas no pueden tener datos sensibles, con excepciones que permiten el manejo de los datos sensibles, sea el consentimiento explicito, el interés público, realizar una investigación científica o una emergencia médica.</p>
 					<p>Por ejemplo, una institución de salud puede guardar tu historial médico, una comisaría puede conservar tu historial criminal, una iglesia puede saber tu religión, etc.</p>
 				</div>
 				<div id="datosPersonalesImg"><img src="datosPersonalesImagen.png"></img></div>
@@ -109,13 +109,13 @@
 			<h2>¿Qué pueden hacer las empresas con tus datos?</h2><br>
 			<h3>Personalizar la experiencia del usuario:</h3>
 			<p>Las empresas utilizan tus datos para personalizar tu experiencia, analizando tu comportamiento y adaptando su contenido, recomendaciones, publicidad y ofertas a tus intereses y necesidades específicas. Por ejemplo:</p>
-			<p>-Las empresas muestran anuncios personalizados utilizando información sobre tus hábitos en internet, como lo que buscas, cuándo aceptas las cookies de una página, tus intereses en redes sociales, los lugares que visitas y lo que compras en línea, para mostrarte publicidad que probablemente te guste.</p><br>
+			<p>-¿Recuerdas lo de Google vediendo tus búsquedas? Es para esto. Las empresas muestran anuncios personalizados utilizando información sobre tus hábitos en Internet, como lo que buscas, cuándo aceptas las cookies de una página, tus intereses en redes sociales, los lugares que visitas y lo que compras en línea, para mostrarte publicidad que probablemente te guste.</p><br>
 			<h3>Analizar riesgos o virus:</h3>
-			<p>Las empresas usan tus datos para prevenir problemas, como fraude o robos, analizando cómo te comportas en línea e identificando patrones sospechosos, para así tomar decisiones seguras sobre préstamos, seguros e inversiones, y proteger tu dinero e información importante. Por ejemplo:</p>
+			<p>Las empresas usan tus datos para prevenir problemas, como fraudes o robos, analizando cómo te comportas en línea e identificando patrones sospechosos, para así tomar decisiones seguras sobre préstamos, seguros, inversiones, y proteger tu dinero e información importante. Por ejemplo:</p>
 			<p>-Las empresas observan qué buscas, qué sitios visitas, qué compras y demás, así usan esa información para predecir qué sules hacer, cuando algo muy sospechoso se presenta tienden a intentar contactarte o notificarte de un potencial peligro.</p><br>
 			<p>¡Que encantadoras son las empresas! Cuando crezca, quiero ser una empresa, son tan agradables- no, casi lo olvido, las empresas no siempre tienen las mejores intenciones y claro que tienen que ser reguladas, de lo contrario simplemente se llevarían todo tu dinero o información y eso no es encantador.</p><br><br>
 			<h2>¿Qué <strong>NO</strong> pueden hacer las empresas con tus datos?</h2><br>
-			<p>La ley 26.388 del código penal argentino establece una larga lista de delitos y condenas relacionadas al mal uso de tus datos y la propagación de contenido indebido, información que ahora condensaremos a una simpática lista así sabes qué no debes hacer y qué no deben hacerte.</p><br>
+			<p>La Ley 26.388 del código penal argentino establece una larga lista de delitos y condenas relacionadas al mal uso de tus datos y la propagación de contenido indebido, información que ahora condensaremos a una simpática lista así sabes qué no debes hacer y qué no deben hacerte.</p><br>
 			<table align= "center">
 				<tr>
 					<th>Delito</th>
