it should probably work now

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 			<h2>¿Qué pueden hacer las empresas con tus datos?</h2><br>
 			<h3>Personalizar la experiencia del usuario:</h3>
 			<p>Las empresas utilizan tus datos para personalizar tu experiencia, analizando tu comportamiento y adaptando su contenido, recomendaciones, publicidad y ofertas a tus intereses y necesidades específicas. Por ejemplo:</p>
-			<p>-¿Recuerdas lo de Google vediendo tus búsquedas? Es para esto. Las empresas muestran anuncios personalizados utilizando información sobre tus hábitos en Internet, como lo que buscas, cuándo aceptas las cookies de una página, tus intereses en redes sociales, los lugares que visitas y lo que compras en línea, para mostrarte publicidad que probablemente te guste.</p><br>
+			<p>-¿Recuerdas lo de Google vendiendo tus búsquedas? Es para esto. Las empresas muestran anuncios personalizados utilizando información sobre tus hábitos en Internet, como lo que buscas, cuándo aceptas las cookies de una página, tus intereses en redes sociales, los lugares que visitas y lo que compras en línea, para mostrarte publicidad que probablemente te guste.</p><br>
 			<h3>Analizar riesgos o virus:</h3>
 			<p>Las empresas usan tus datos para prevenir problemas, como fraudes o robos, analizando cómo te comportas en línea e identificando patrones sospechosos, para así tomar decisiones seguras sobre préstamos, seguros, inversiones, y proteger tu dinero e información importante. Por ejemplo:</p>
 			<p>-Las empresas observan qué buscas, qué sitios visitas, qué compras y demás, así usan esa información para predecir qué sules hacer, cuando algo muy sospechoso se presenta tienden a intentar contactarte o notificarte de un potencial peligro.</p><br>
